<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.manage_preferences.ManagePreferencesFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="2dp"
        android:text="Favorite Topics:"
        android:textColor="#813B09"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/math"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/math"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="511dp"
        android:text="Mathematics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/physics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="462dp"
        android:text="Physics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/chem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="422dp"
        android:text="Chemistry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/physics" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="380dp"
        android:text="Biology"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/CS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="340dp"
        android:text="Computer Science"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/English"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="300dp"
        android:text="English"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="259dp"
        android:text="History"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/English"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/savepref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="167dp"
        android:backgroundTint="#A0522D"
        android:text="Save Preferences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/History" />

    <Spinner
        android:id="@+id/tutor"
        android:layout_width="233dp"
        android:layout_height="36dp"
        android:spinnerMode="dropdown"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/savepref"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toEndOf="@+id/math"
        app:layout_constraintTop_toBottomOf="@+id/favoriteTutors"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/favoriteTutors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="57dp"
        android:text="Favorite Tutors:"
        android:textColor="#813B09"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>